# miao

./: .gitignore  CLAUDE.md  Cargo.toml  IVNC_REPLACEMENT_PLAN.md  README.md  build-ci.sh  build-info-temp.json  build.sh  config.ts  config.yaml  config.yaml.example  index.ts  ivnc_config.json  miao.ts  miao.yaml  package.json  push.sh  release.sh  rule.ts  run.sh  types.ts  ui-test.sh
.claude/: settings.local.json
.github/workflows/: build-release.yml
assets/i3/i3/: config
assets/i3/polybar/: launch.sh
bun/: index.ts  miao.yaml  template-config.ts
embedded/: gotty-index.html  gotty-restart-button.js
frontend/: DESIGN_MIGRATION_SUMMARY.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MockProvider.tsx
frontend/src/hooks/: index.ts  useLogs.ts  useProxies.ts  useStatus.ts  useTraffic.ts
frontend/src/lib/: ansi.ts  api.ts  format.ts  mockFetch.ts  ui-text.ts  utils.ts
frontend/src/mocks/: handlers.ts  index.ts
frontend/src/stores/: useStore.ts
frontend/src/types/: api.ts  components.ts
miao-web/: PAGE_REFACTOR_SUMMARY.md  REFACTOR_PLAN.md  package-lock.json  package.json  pnpm-lock.yaml
miao-web/src/app/: layout.tsx  page.tsx
miao-web/src/hooks/: useLogs.ts  (+3 more)
panel/: App.tsx  Config.tsx  Control.tsx  Node.tsx  Rule.tsx
public/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  _not-found.txt  dashboard.html  dashboard.txt  index.html  login.html  login.txt  setup.html  setup.txt  test-mock.html
public/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
public/dashboard/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.dashboard.__PAGE__.txt  __next.dashboard.txt  apps.html  apps.txt  logs.html  logs.txt  proxies.html  proxies.txt  sync.html  sync.txt  terminals.html  terminals.txt  tunnels.html  tunnels.txt  vnc.html  vnc.txt
public/login/: __next._full.txt  __next._tree.txt  __next.login.__PAGE__.txt
public/setup/: __next._full.txt  __next._tree.txt  __next.setup.__PAGE__.txt  __next.setup.txt
src/: full_tunnel.rs  main.rs  sync.rs  tcp_tunnel.rs
src/app/: mod.rs
src/sync/: archiver.rs  compressor.rs  error.rs  manifest.rs  mod.rs  pipeline.rs  scanner.rs  transport.rs
tests/: ui-test.sh
(+131 files in other folders)
