[package]
name = "miao-rust"
version = "0.0.0"
edition = "2021"

[features]
# Optional SSH reverse TCP tunneling via russh (git dependency).
tcp_tunnel = ["dep:russh", "dep:sha2"]

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tower = "0.5"
tower-http = "0.5"
lazy_static = "1.4"
nix = { version = "0.29", features = ["signal", "user"] }
base64 = "0.22"
percent-encoding = "2.3"
jsonwebtoken = "9.3"
chrono = "0.4"
russh = { git = "https://github.com/warp-tech/russh", optional = true }
sha2 = { version = "0.10", optional = true }
uuid = { version = "1.0", features = ["v4"] }
